Fix Safari image spacing for mobile views

--- a/css/projectsection.css
+++ b/css/projectsection.css
@@ -264,9 +264,6 @@
 
     .flex-categories > img {
         width: auto;
-        min-height: 100%;
-        min-width: 100%;
-        object-fit: scale-down;
         align-items: flex-start;
     }
   }
